Limpeza de Dados

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a200c66b",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "ff9194ef",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "4                 0.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "516c5b3c",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3217670d",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
       "NumberRealEstateLoansOrLines                0\n",
       "dtype: int64\n",
       "\n",
-      "Describe (pontos importantes p/ outliers):\n",
+      "Describe para indetificação de outliers:\n",
       "                                      min    1%           5%          50%  \\\n",
       "RevolvingUtilizationOfUnsecuredLines  0.0   0.0     0.000000     0.154181   \n",
       "age                                   0.0  24.0    29.000000    52.000000   \n",
@@ -359,22 +359,6 @@
     "\n",
     "Pessoas menores de 18 anos devem ser deletadas do modelo."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0b70f90",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "113a1549",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
