Inclusão Modelo + Score

--- a/notebooks/02_clean_data.ipynb
+++ b/notebooks/02_clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0daa2961",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ee8d796e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>SeriousDlqin2yrs</th>\n",
+       "      <th>RevolvingUtilizationOfUnsecuredLines</th>\n",
+       "      <th>age</th>\n",
+       "      <th>NumberOfTime30-59DaysPastDueNotWorse</th>\n",
+       "      <th>DebtRatio</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <th>NumberOfOpenCreditLinesAndLoans</th>\n",
+       "      <th>NumberOfTimes90DaysLate</th>\n",
+       "      <th>NumberRealEstateLoansOrLines</th>\n",
+       "      <th>NumberOfTime60-89DaysPastDueNotWorse</th>\n",
+       "      <th>NumberOfDependents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.766127</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.802982</td>\n",
+       "      <td>9120.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.957151</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.121876</td>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.658180</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.085113</td>\n",
+       "      <td>3042.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.233810</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.036050</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.907239</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.024926</td>\n",
+       "      <td>63588.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  SeriousDlqin2yrs  RevolvingUtilizationOfUnsecuredLines  age  \\\n",
+       "0           1                 1                              0.766127   45   \n",
+       "1           2                 0                              0.957151   40   \n",
+       "2           3                 0                              0.658180   38   \n",
+       "3           4                 0                              0.233810   30   \n",
+       "4           5                 0                              0.907239   49   \n",
+       "\n",
+       "   NumberOfTime30-59DaysPastDueNotWorse  DebtRatio  MonthlyIncome  \\\n",
+       "0                                     2   0.802982         9120.0   \n",
+       "1                                     0   0.121876         2600.0   \n",
+       "2                                     1   0.085113         3042.0   \n",
+       "3                                     0   0.036050         3300.0   \n",
+       "4                                     1   0.024926        63588.0   \n",
+       "\n",
+       "   NumberOfOpenCreditLinesAndLoans  NumberOfTimes90DaysLate  \\\n",
+       "0                               13                        0   \n",
+       "1                                4                        0   \n",
+       "2                                2                        1   \n",
+       "3                                5                        0   \n",
+       "4                                7                        0   \n",
+       "\n",
+       "   NumberRealEstateLoansOrLines  NumberOfTime60-89DaysPastDueNotWorse  \\\n",
+       "0                             6                                     0   \n",
+       "1                             0                                     0   \n",
+       "2                             0                                     0   \n",
+       "3                             0                                     0   \n",
+       "4                             1                                     0   \n",
+       "\n",
+       "   NumberOfDependents  \n",
+       "0                 2.0  \n",
+       "1                 1.0  \n",
+       "2                 0.0  \n",
+       "3                 0.0  \n",
+       "4                 0.0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DATASET = \"../data/cs-training.csv\"\n",
     "COLUMN_TARGET = \"SeriousDlqin2yrs\"\n",
@@ -30,69 +187,119 @@
    "execution_count": null,
    "id": "f7a103f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape final: (149999, 13)\n",
+      "Target rate: 0.06684044560297069\n",
+      "Missing restantes (top 10):\n",
+      "SeriousDlqin2yrs                        0\n",
+      "RevolvingUtilizationOfUnsecuredLines    0\n",
+      "age                                     0\n",
+      "NumberOfTime30-59DaysPastDueNotWorse    0\n",
+      "DebtRatio                               0\n",
+      "MonthlyIncome                           0\n",
+      "NumberOfOpenCreditLinesAndLoans         0\n",
+      "NumberOfTimes90DaysLate                 0\n",
+      "NumberRealEstateLoansOrLines            0\n",
+      "NumberOfTime60-89DaysPastDueNotWorse    0\n",
+      "dtype: int64\n",
+      "Salvo: train_clean.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nOutput:\\n\\nShape final: (149999, 13)\\nTarget rate: 0.06684044560297069\\nMissing restantes (top 10):\\nSeriousDlqin2yrs                        0\\nRevolvingUtilizationOfUnsecuredLines    0\\nage                                     0\\nNumberOfTime30-59DaysPastDueNotWorse    0\\nDebtRatio                               0\\nMonthlyIncome                           0\\nNumberOfOpenCreditLinesAndLoans         0\\nNumberOfTimes90DaysLate                 0\\nNumberRealEstateLoansOrLines            0\\nNumberOfTime60-89DaysPastDueNotWorse    0\\ndtype: int64\\n\\nSalvo: train_clean.csv \\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def cap_series(s: pd.Series, p_high=0.99):\n",
-    "    hi = s.quantile(p_high)\n",
-    "    return s.clip(upper=hi)\n",
+    "\n",
     "\n",
     "def main():\n",
     "    df = pd.read_csv(DATASET)\n",
     "\n",
-    "# 1) Remover coluna lixo\n",
-    "    if \"Unnamed: 0\" in df.columns:\n",
-    "        df = df.drop(columns=[\"Unnamed: 0\"])\n",
+    "# Remover coluna lixo\n",
+    "    df = df.drop(columns=[\"Unnamed: 0\"])\n",
     "\n",
-    "# 2) Removação de idade válida\n",
+    "# Removação de idade válida (Identifica no EDA 01)\n",
     "    df = df[df[\"age\"] > 0].copy()\n",
     "\n",
-    "# 3) flags de missing + imputação\n",
-    "    df[\"MonthlyIncome_missing\"] = df[\"MonthlyIncome\"].isna().astype(int)\n",
-    "    df[\"Dependents_missing\"] = df[\"NumberOfDependents\"].isna().astype(int)\n",
+    "# Essas colunas apresentaram grande quantidade nulos no EDA, porém vou escolher não deletar essas linhas pois representa 20% das linhas.\n",
+    "# Então irei criar uma coluna com uma flag indicando que estava faltando\n",
+    "# Os valores nulos serão preenchidos com a mediana, se usar a média pode ser afetado por outliers\n",
+    "    df[\"MonthlyIncome_missing\"] = df[\"MonthlyIncome\"].isna().astype(int) # caso seja null, retorna True\n",
+    "    df[\"Dependents_missing\"] = df[\"NumberOfDependents\"].isna().astype(int) # caso seja null, retorna True\n",
     "\n",
+    "# Os valores nulos serão preenchidos com a mediana, se usar a média pode ser afetado por outliers\n",
     "    df[\"MonthlyIncome\"] = df[\"MonthlyIncome\"].fillna(df[\"MonthlyIncome\"].median())\n",
+    "\n",
+    "# NumberOfDependents tem poucos nulos ~2, então vou assumir que são 0, pois nesse caso é muito factivel e não acho que terá grande impacto no resultado\n",
+    "\n",
     "    df[\"NumberOfDependents\"] = df[\"NumberOfDependents\"].fillna(0)\n",
     "\n",
-    "# 4) tratar valores anômalos (>=90) nas colunas de atraso\n",
-    "    late_cols = [\n",
-    "        \"NumberOfTime30-59DaysPastDueNotWorse\",\n",
-    "        \"NumberOfTime60-89DaysPastDueNotWorse\",\n",
-    "        \"NumberOfTimes90DaysLate\",\n",
-    "    ]\n",
+    "# Agora irei tratar outliers nas colunas de atraso\n",
     "\n",
-    "    for c in late_cols:\n",
-    "        if c in df.columns:\n",
-    "            df[f\"{c}_anom90\"] = (df[c] >= 90).astype(int)  # guarda o “sinal” do problema\n",
-    "            df.loc[df[c] >= 90, c] = np.nan               # remove o valor absurdo\n",
-    "            df[c] = df[c].fillna(df[c].median())          # mediana tende a ser 0\n",
+    "# Colunas de atraso podem ter valores extremos (ex.: 98), esses valores podem criar falsas premissas no scorecard.\n",
+    "# Aqui irei capar em no máximo em 10: qualquer valor > 10 vira 10, assim será mantido a ideia de \"Muito alto\".\n",
+    "# Em risco de crédito, a informação útil costuma ser  em faixas de atraso: 0 (bom), 1–2 (alerta), 3+ (ruim) e muito alto (péssimo).\n",
     "\n",
-    "# 5) cap de outliers (p99)\n",
-    "    cap_cols = [\n",
-    "        \"RevolvingUtilizationOfUnsecuredLines\",\n",
-    "        \"DebtRatio\",\n",
-    "        \"MonthlyIncome\",\n",
-    "        \"NumberOfOpenCreditLinesAndLoans\",\n",
-    "        \"NumberRealEstateLoansOrLines\",\n",
-    "        \"NumberOfDependents\",\n",
-    "        *late_cols\n",
-    "    ]\n",
+    "    df.loc[df[\"NumberOfTimes90DaysLate\"] > 10, \"NumberOfTimes90DaysLate\"] = 10\n",
     "\n",
-    "    for c in cap_cols:\n",
-    "        if c in df.columns:\n",
-    "            df[c] = cap_series(df[c], p_high=0.99)\n",
+    "# Por segurança, irei capa o modelo\n",
+    "# Abaixo o valores o percetil > que 99%, serão alterados para o percentil e 99%\n",
+    "# Isso evitar distorções no modelo, e mantém uma ideia parecida\n",
+    "    def cap_series(s: pd.Series, p_high=0.99):\n",
+    "        hi = s.quantile(p_high)\n",
+    "        return s.clip(upper=hi)\n",
     "\n",
-    "# 6) Sanity final\n",
+    "    df[\"RevolvingUtilizationOfUnsecuredLines\"] = cap_series(df[\"RevolvingUtilizationOfUnsecuredLines\"], p_high=0.99)\n",
+    "    df[\"DebtRatio\"] = cap_series(df[\"DebtRatio\"], p_high=0.99)\n",
+    "    df[\"MonthlyIncome\"] = cap_series(df[\"MonthlyIncome\"], p_high=0.99)\n",
+    "    df[\"NumberOfOpenCreditLinesAndLoans\"] = cap_series(df[\"NumberOfOpenCreditLinesAndLoans\"], p_high=0.99)\n",
+    "    df[\"NumberRealEstateLoansOrLines\"] = cap_series(df[\"NumberRealEstateLoansOrLines\"], p_high=0.99)\n",
+    "    df[\"NumberOfDependents\"] = cap_series(df[\"NumberOfDependents\"], p_high=0.99)\n",
+    "\n",
+    "# Sanity Checker\n",
     "    print(\"Shape final:\", df.shape)\n",
     "    print(\"Target rate:\", df[COLUMN_TARGET].mean())\n",
     "    print(\"Missing restantes (top 10):\")\n",
     "    print(df.isna().sum().sort_values(ascending=False).head(10))\n",
     "\n",
-    "# 7) salvar (cuidado: NÃO subir no GitHub)\n",
-    "    df.to_csv(\"train_clean.csv\", index=False)\n",
+    "# Salva\n",
+    "\n",
+    "    df.to_csv(\"../data/train_clean.csv\", index=False)\n",
     "    print(\"Salvo: train_clean.csv\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()\n",
+    "\"\"\"\n",
+    "Output:\n",
+    "\n",
+    "Shape final: (149999, 13)\n",
+    "Target rate: 0.06684044560297069\n",
+    "Missing restantes (top 10):\n",
+    "SeriousDlqin2yrs                        0\n",
+    "RevolvingUtilizationOfUnsecuredLines    0\n",
+    "age                                     0\n",
+    "NumberOfTime30-59DaysPastDueNotWorse    0\n",
+    "DebtRatio                               0\n",
+    "MonthlyIncome                           0\n",
+    "NumberOfOpenCreditLinesAndLoans         0\n",
+    "NumberOfTimes90DaysLate                 0\n",
+    "NumberRealEstateLoansOrLines            0\n",
+    "NumberOfTime60-89DaysPastDueNotWorse    0\n",
+    "dtype: int64\n",
+    "\n",
+    "Salvo: train_clean.csv \n",
+    "\"\"\""
    ]
   }
  ],
@@ -103,7 +310,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.10"
   }
  },
