Update score + Atualização README

--- a/notebooks/03_model+score.ipynb
+++ b/notebooks/03_model+score.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cfbf4824",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\jp200\\OneDrive\\Desktop\\Projetos\\Score PD\\pd-scorecard\\.venv\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:406: ConvergenceWarning: lbfgs failed to converge after 2000 iteration(s) (status=1):\n",
+      "c:\\Users\\jp200\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:406: ConvergenceWarning: lbfgs failed to converge after 2000 iteration(s) (status=1):\n",
       "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
       "\n",
       "Increase the number of iterations to improve the convergence (max_iter=2000).\n",
@@ -492,7 +492,7 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n",
-      "C:\\Users\\jp200\\AppData\\Local\\Temp\\ipykernel_34372\\1884764819.py:75: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\jp200\\AppData\\Local\\Temp\\ipykernel_44252\\3559191830.py:75: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  decis = tmp.groupby(\"decil\").agg(\n"
      ]
     }
@@ -671,38 +671,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Score gerado (um por cliente do teste)\n",
       "Quantidade de scores: 30000\n",
-      "Score min/max: 300.0 580.0\n",
-      "Primeiros 10 scores: [527. 541. 522. 521. 501. 480. 518. 300. 531. 516.]\n",
+      "Score min/max: 0 967\n",
+      "Primeiros 10 scores: [670 665 531 600 776 251 510 763 712 358]\n",
       "\n",
-      "✅ Bad rate por faixa de score (pior -> melhor):\n",
-      "         score_band  total  bads  bad_rate   avg_score    avg_pd  lift_vs_base\n",
-      "0  (299.999, 460.0]   3098  1002  0.323434  430.383473  0.831357      4.839418\n",
-      "1    (460.0, 477.0]   2937   346  0.117807  469.085461  0.650388      1.762703\n",
-      "2    (477.0, 493.0]   3063   237  0.077375  485.858962  0.510829      1.157732\n",
-      "3    (493.0, 505.0]   2920   138  0.047260  499.838014  0.391890      0.707136\n",
-      "4    (505.0, 515.0]   3301   100  0.030294  510.748864  0.306382      0.453275\n",
-      "5    (515.0, 522.0]   3136    61  0.019452  519.095344  0.248511      0.291045\n",
-      "6    (522.0, 528.0]   2824    52  0.018414  525.473088  0.209517      0.275515\n",
-      "7    (528.0, 534.0]   2794    25  0.008948  531.476020  0.177041      0.133881\n",
-      "8    (534.0, 542.0]   3140    27  0.008599  538.382803  0.145046      0.128659\n",
-      "9    (542.0, 580.0]   2787    17  0.006100  549.053463  0.105868      0.091268\n",
-      "\n",
-      "✅ Política de decisão (cutoff):\n",
-      "Cutoff score: 600\n",
-      "Approval rate: 0.0\n",
-      "Bad rate (approved): nan\n",
-      "Bad rate (rejected): 0.06683333333333333\n",
-      "Defaults capturados nos recusados: 0.9999999999995013\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jp200\\AppData\\Local\\Temp\\ipykernel_34372\\755034097.py:49: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  bands = tmp.groupby(\"score_band\").agg(\n"
+      "Cutoff: 500\n",
+      "Aprovados: 74.0%\n"
      ]
     }
    ],
@@ -713,18 +687,26 @@
     "# Quanto maior o score, menos risco \n",
     "# Multiplicador de score setado para 100\n",
     "\n",
-    "score = np.round((1 - np.array(pd_test)) * 100).astype(int) # Inversamente proporcial pois o PD é chance de default, o Score alto é comumente visto com algo bom\n",
+    "score = np.round((1 - np.array(pd_test)) * 1000).astype(int) # Inversamente proporcial pois o PD é chance de default, o Score alto é comumente visto com algo bom\n",
     "\n",
     "print(\"Quantidade de scores:\", len(score))\n",
     "print(\"Score min/max:\", score.min(), score.max())\n",
     "print(\"Primeiros 10 scores:\", score[:10])\n",
     "\n",
-    "CUTOFF = 700  # nota de corte - aprovado se score >= 700 \n",
+    "CUTOFF = 500  # nota de corte - aprovado se score >= 500 \n",
     "\n",
     "approved = (score > CUTOFF).astype(int)\n",
     "print(\"\\nCutoff:\", CUTOFF)\n",
-    "print(\"Aprovados (%):\", approved.mean())"
+    "print(f\"Aprovados: {round(approved.mean(),2)*100}%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "623b9334",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
